Fixed alignment issue

--- a/styles/about.css
+++ b/styles/about.css
@@ -221,7 +221,7 @@ span.teal {
         width: 10px;
         height: 100%;
         left: 50%;
-        margin-left: -25px;
+        margin-left: -5px;
         padding-top: 1.5rem;
         background: rgba(254,166,166,0.4);
     }
